@@ -52,6 +52,7 @@ Application Changes:
 - Changing character creation options (e.g. priority entries) without a metavariant selected no longer causes odd UI issues. Fixes #5042.
 - Fixed an issue with items with ratings not correctly setting their rating when added as a child of another object. Closes #5054
 - Fixed vehicle mods incorrectly being filtered by weapon mod capacity during career mode.
+- Stolen vehicles now properly remain stolen after saving and reloading a character.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
